--- a/Project2.1/assets/css/style.css
+++ b/Project2.1/assets/css/style.css
@@ -110,13 +110,15 @@ h1 {
     box-shadow: 0 3px 5px;
     padding: 20px 20px;
     text-align: center;
-    
 }
 
+.contact-us {
+    
+}
   
   
 
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
     .header .container {
       flex-direction: column;
       padding-top: 20px;
