--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 {{!-- layout for homepage --}}
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,4 +10,212 @@
 <body>
     {{{ body }}}
 </body>
+</html> --}}
+
+{{!-- homepage --}}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
+        <link rel="stylesheet" href="/assets/css/style.css">
+        <title>DC Dines Underground</title>
+    </head>
+
+    <!--Option for nav bar-->
+    <header>
+    </header>
+
+    <body>
+
+        <!--Showcase section-->
+        <section class="showcase">
+            <div class="video-container">
+                <video src="/assets/images/dcnightshort.mov" autoplay muted loop></video>
+            </div>
+            <div class="header">
+                <img src="/assets/images/DCDines-removebg.png" alt="logo"/>
+                <h1>
+                    <a href="#about" class="btn">Login</a>
+                    <a href="#about" class="btn">Sign Up</a>
+                </h1>
+            </div>
+        </section>
+
+        <section id="about">
+            <h1></h1>
+            <p></p>
+        </section>
+
+        <!--Boxes with website purpose-->
+        <section class="boxes has-text-weight-bold">
+            <div class="container">
+            <div class="box">
+                <h2>Dine</h2>
+                <p>
+                Dine at local Washington DC restaurants
+                </p>
+            </div>
+        
+            <div class="box">
+                <h2>Review</h2>
+                <p>
+                Post your reviews on this secure forum for members to see
+                </p>
+            </div>
+        
+            <div class="box">
+                <h2>Share</h2>
+                <p>
+                Communicate with other community members and share recommendations
+                </p>
+            </div>
+            
+            <div class="box">
+                <h2>Explore</h2>
+                <p>
+                Discover new favorite restaurants
+                </p>
+            </div>
+            
+            </div>
+        </section>
+        
+        <!--Contact us form used from project1-->
+        <section class="contact-us">
+            <div class="container py-5 my-5">
+              <h2 class="title is-2 is-capitalized">Contact DC Dines Underground</h2>
+                <div class="columns is-justify-content-center">
+                  <div class="column is-5-tablet is-5-desktop is-5-widescreen is-5-fullh">
+                    <form method="post"
+                    action="https://public.herotofu.com/v1/5aa8ac20-fc8b-11ec-afe3-392e2c671a11" class="box p-5">
+                    
+                      <label class="is-block mb-4">
+                        <span class="is-block mb-2">Your Name</span>
+                        <input
+                          name="name"
+                          type="text"
+                          class="input"
+                          placeholder="Name"
+                        />
+                      </label>
+          
+                      <label class="is-block mb-4">
+                        <span class="is block mb-2">Email Address</span>
+                        <input
+                          name="email"
+                          type="email"
+                          class="input"
+                          placeholder="Email"
+                        />
+                      </label>
+          
+                      <label class="is-block mb-4">
+                        <span class="is-block mb-2">Message</span>
+                        <textarea
+                          name="message"
+                          class="textarea"
+                          rows="4"
+                          placeholder="Your question for DC Dines Underground.."
+                        ></textarea>
+                      </label>
+          
+                      <div class="mb-4">
+                        <button type="submit" class="button is-link px-4">Submit</button>
+                      </div>
+                  
+                  </form>
+                  </div>
+                </div>
+              </div>  
+        </section>
+
+        <!--Project Team Bio-->
+        <section>
+          <div class="columns is-multiline is-justify-content-center">
+
+           <!--Person1-->
+            <div class="column is-5">
+              <div class="box p-5">
+                <div class="columns">
+                  <div class="column is-4 mb-4 mb-0-desktop">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="/assets/images/tjp4ca.png" alt="">
+                  </div>
+                  <div class="column is-8">
+                    <h3 class="is-size-4 has-text-weight-semibold">Michael Park</h3>
+                    <p class="mb-6 has-text-grey-dark">Back End Development</p>
+                    <p class="has-text-grey-dark">GitHub</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <!--Person2-->
+            <div class="column is-5">
+              <div class="box p-5">
+                <div class="columns">
+                  <div class="column is-4 mb-4 mb-0-desktop">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="/assets/images/nealmm.png" alt="">
+                  </div>
+                  <div class="column is-8">
+                    <h3 class="is-size-4 has-text-weight-semibold">Matt Neal</h3>
+                    <p class="mb-6 has-text-grey-dark">Back End Development</p>
+                    <p class="has-text-grey-dark">GitHub</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!--Person3-->
+            <div class="column is-5">
+              <div class="box p-5">
+                <div class="columns">
+                  <div class="column is-4 mb-4 mb-0-desktop">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="/assets/images/alenco98.png" alt="">
+                  </div>
+                  <div class="column is-8">
+                    <h3 class="is-size-4 has-text-weight-semibold">Franco Melendez</h3>
+                    <p class="mb-6 has-text-grey-dark">Front End Development</p>
+                    <p class="has-text-grey-dark">GitHub</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <!--Person4-->
+            <div class="column is-5">
+              <div class="box p-5">
+                <div class="columns">
+                  <div class="column is-4 mb-4 mb-0-desktop">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="/assets/images/gsmith560.png" alt="">
+                  </div>
+                  <div class="column is-8">
+                    <h3 class="is-size-4 has-text-weight-semibold">Grahah Smith</h3>
+                    <p class="mb-6 has-text-grey-dark">Front End Development</p>
+                    <p class="has-text-grey-dark">GitHub</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            
+
+        </div>
+        </section>
+
+        <!--Footer-->
+        <footer class="container">
+            <h2 class="text-movie has-text-centered">DC Dines Underground</h2>
+            <div class="text-movie has-text-centered has-text-weight-bold">
+                &copy; 2022 Group 3
+            </div>
+        </footer>
+
+    </body>
+
+
 </html>
+
