--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,29 +1,11 @@
 {{!-- homepage --}}
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
-        <link rel="stylesheet" href="../public/assets/css/style.css">
-        <title>DC Dines Underground</title>
-    </head>
-
-    <!--Option for nav bar-->
-    <header>
-    </header>
-
-    <body>
-
         <!--Showcase section-->
         <section class="showcase">
             <div class="video-container">
-                <video src="../public/assets/images/dcnightshort.mov" autoplay muted loop></video>
+                <video src="/assets/images/dcnightshort.mov" autoplay muted loop></video>
             </div>
             <div class="header">
-                <img src="../public/assets/images/DCDines-removebg.png" alt="logo"/>
+                <img src="/assets/images/DCDines-removebg.png" alt="logo"/>
                 <h1>
                     <a href="#about" class="btn">Login</a>
                     <a href="#about" class="btn">Sign Up</a>
@@ -128,7 +110,7 @@
               <div class="box p-5">
                 <div class="columns">
                   <div class="column is-4 mb-4 mb-0-desktop">
-                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../public/assets/images/tjp4ca.png" alt="">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="/assets/images/tjp4ca.png" alt="">
                   </div>
                   <div class="column is-8">
                     <h3 class="is-size-4 has-text-weight-semibold">Michael Park</h3>
@@ -144,7 +126,7 @@
               <div class="box p-5">
                 <div class="columns">
                   <div class="column is-4 mb-4 mb-0-desktop">
-                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../public/assets/images/nealmm.png" alt="">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="/assets/images/nealmm.png" alt="">
                   </div>
                   <div class="column is-8">
                     <h3 class="is-size-4 has-text-weight-semibold">Matt Neal</h3>
@@ -160,7 +142,7 @@
               <div class="box p-5">
                 <div class="columns">
                   <div class="column is-4 mb-4 mb-0-desktop">
-                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../public/assets/images/alenco98.png" alt="">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="/assets/images/alenco98.png" alt="">
                   </div>
                   <div class="column is-8">
                     <h3 class="is-size-4 has-text-weight-semibold">Franco Melendez</h3>
@@ -176,7 +158,7 @@
               <div class="box p-5">
                 <div class="columns">
                   <div class="column is-4 mb-4 mb-0-desktop">
-                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="../public/assets/images/gsmith560.png" alt="">
+                    <img class="image is-fullwidth is-cover is-rounded" style="height: 200px;" src="/assets/images/gsmith560.png" alt="">
                   </div>
                   <div class="column is-8">
                     <h3 class="is-size-4 has-text-weight-semibold">Grahah Smith</h3>
@@ -199,9 +181,4 @@
                 &copy; 2022 Group 3
             </div>
         </footer>
-
-    </body>
-
-
-</html>
 
