--- a/Project2.1/assets/css/style.css
+++ b/Project2.1/assets/css/style.css
@@ -1,5 +1,7 @@
 
+* {
 
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -62,8 +64,7 @@ h1 {
 .header img {
     position: center;
     size: 750;
-    
-    
+      
 }
 
 .btn {
@@ -81,7 +82,6 @@ h1 {
 
 .btn:hover {
     transform: scale(1.2);
-    
     
 }
 
@@ -115,19 +115,4 @@ h1 {
 .contact-us {
     
 }
-  
-  
 
-@media (max-width: 768px) {
-    .header .container {
-      flex-direction: column;
-      padding-top: 20px;
-      text-align: center;
-    }
-  
-    .boxes .container {
-      display: block;
-      text-align: center;
-    }
-  }
-  
