--- a/Project2.1/assets/css/style.css
+++ b/Project2.1/assets/css/style.css
@@ -46,7 +46,7 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     right: 50%;
@@ -107,7 +107,7 @@ h1 {
     color: #fff;
     border-radius: 5px;
     margin: 10px 10px;
-    box-shadow: 0 3px 5px;
+    
     padding: 20px 20px;
     text-align: center;
 }
