--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,12 +13,44 @@
       </div>
   </section>
 
-  <!-- Search field with Google Places API autocomplete -->
+  <!-- Search section -->
   <section>
     <div class="container">
+      <!-- Search field with Google Places API autocomplete -->
       <input id="search-field" class="input" placeholder="Look up restaurants" type="text">
       <script src="/assets/js/search-field.js"></script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALRRVTnCfSVLXoktn4-shX_mEYzi39LhA&libraries=places&callback=initAutocomplete" async defer></script>
+    </div>
+
+    <div class="container">
+      <!-- Review submission form -->
+      <form action="/api/review" method="POST">
+        <div class="field">
+          <label class="label" for="review-rating">Rating</label>
+          <div class="control">
+            <input class="input" id="review-rating" name="rating" type="number" min="0" max="5" required>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label" for="review-title">Title</label>
+          <div class="control">
+            <input class="input" id="review-title" name="review_title" type="text" required>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label" for="review-comment">Comment</label>
+          <div class="control">
+            <textarea class="textarea" id="review-comment" name="review_comment" required></textarea>
+          </div>
+        </div>
+
+        <div>
+          <input type="submit" class="button">
+        </div>
+      </form>
+
     </div>
   </section>
 
