--- a/Project2.1/assets/css/style.css
+++ b/Project2.1/assets/css/style.css
@@ -1,5 +1,4 @@
 
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -28,7 +27,7 @@ h1 {
     justify-content: center;
     text-align: center;
     padding: 0 20px;
-    color: #5f7cb8;
+    color: #112142;
 
 }
 
@@ -47,7 +46,7 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     right: 50%;
@@ -62,8 +61,7 @@ h1 {
 .header img {
     position: center;
     size: 750;
-    
-    
+      
 }
 
 .btn {
@@ -71,17 +69,17 @@ h1 {
     display: inline-block;
     padding: 10px 20px;
     color: #e5e6e8;
-    border: #f0f2f9 1px solid;
+    border: #d35460 1px solid;
     border-radius: 5px;
     margin-top: 40px;
     margin-left: 20px;
     opacity: 1.0;
+    background-color: rgb(8, 8, 8);
 
 }
 
 .btn:hover {
     transform: scale(1.2);
-    
     
 }
 
@@ -102,32 +100,17 @@ h1 {
   }
   
 .box {
-    flex: 3;
-    background: #2d5087;
+    flex: 1;
+    background: #09244f;
+    border: #d35460 1px solid;
+    border-radius: 5px;
     color: #fff;
     border-radius: 5px;
     margin: 10px 10px;
-    box-shadow: 0 3px 5px;
+    
     padding: 20px 20px;
     text-align: center;
 }
 
-.contact-us {
-    
-}
-  
-  
 
-@media (max-width: 768px) {
-    .header .container {
-      flex-direction: column;
-      padding-top: 20px;
-      text-align: center;
-    }
-  
-    .boxes .container {
-      display: block;
-      text-align: center;
-    }
-  }
-  
+
