--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,2 +1,14 @@
 {{!-- log in page --}}
 <h1>Logged In!!!</h1>
+
+{{!-- socket --}}
+{{!-- <button id="increment">+1</button> --}}
+
+<form id="message-form">
+    <input name="message" placeholder="Message">
+    <button>Send</button>
+</form>
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="/assets/js/review.js"></script>
+{{!-- move to review page later --}}
