--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -157,3 +157,7 @@
           </div>
         </div>  
   </section>
+  
+  {{#if loggedIn}}
+  <script src="/assets/js/logout.js"></script>
+  {{/if}}
