--- a/views/layouts/secondary.handlebars
+++ b/views/layouts/secondary.handlebars
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
-        <link rel="stylesheet" href="/assets/css/style.css"> --}}
+        <link rel="stylesheet" href="/assets/css/style2.css"> --}}
         <title>DC Dines Underground</title>
     </head>
 
