--- a/Project2.1/assets/css/style.css
+++ b/Project2.1/assets/css/style.css
@@ -1,23 +1,19 @@
-
+/*begin project styling guide*/
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+/*end project styling guide*/
 
+/*begin body styling*/
 body {
     font-family:Arial, Helvetica, sans-serif;
     line-height: 1.5;
-
 }
+/*end body styling*/
 
-h1 {
-    font-weight: 50;
-    font-size: 20px;
-    line-height: 1.2;
-    margin-bottom: 60px;
-}
-
+/*begin showcase section for video container attributed from video tutorial on entering video background*/
 .showcase {
     position: relative;
     height: 100vh;
@@ -28,9 +24,10 @@ h1 {
     text-align: center;
     padding: 0 20px;
     color: #112142;
-
 }
+/*end of showcase section for video container*/
 
+/*begin styling for video placement/container*/
 .video-container {
     position: absolute;
     top: 5;
@@ -39,9 +36,10 @@ h1 {
     height: 100%;
     overflow: hidden;
     background: var(--primary-color) url(./Screen\ Shot\ 2022-08-18\ at\ 4.46.37\ PM.png) no-repeat center center/cover;
-
 }
+/*end of styling for cideo placement/container*/
 
+/*styling for embedded video*/
 .video-container video {
     width: 100%;
     height: 100%;
@@ -53,17 +51,20 @@ h1 {
     bottom: 50%;
     transform: translate(-50%, -50%);
 }
+/*end of styling for embedded video*/
 
+/*styling for header/where logo is placed*/
 .header {
     z-index: 10;
 }
 
 .header img {
     position: center;
-    size: 750;
-      
+    size: 750;   
 }
+/*end of styling for header/where logo is placed*/
 
+/*start of styling for login/signup buttons*/
 .btn {
     position: center;
     display: inline-block;
@@ -75,14 +76,21 @@ h1 {
     margin-left: 20px;
     opacity: 1.0;
     background-color: rgb(8, 8, 8);
-
 }
 
 .btn:hover {
     transform: scale(1.2);
-    
 }
 
+h1 {
+    font-weight: 50;
+    font-size: 20px;
+    line-height: 1.2;
+    margin-bottom: 60px;
+}
+/*end of styling for login/signup buttons*/
+
+/*start of optional about-us section*/
 #about {
     padding: 40px;
     text-align: center;
@@ -93,11 +101,13 @@ h1 {
     max-width: 500px;
     margin: auto;
 }
+/*end of optional about-us section*/
 
+/*start of styling for website purpose/bio boxes*/
 .boxes .container {
     display: flex;
     justify-content: space-between;
-  }
+}
   
 .box {
     flex: 1;
@@ -107,10 +117,9 @@ h1 {
     color: #fff;
     border-radius: 5px;
     margin: 10px 10px;
-    
     padding: 20px 20px;
     text-align: center;
 }
-
+/*end of styling for website purpose/bio boxes*/
 
 
