--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -34,3 +34,33 @@ input {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 980px) {
+    .login-form {
+        display: inline-block;
+    }
+    
+    .signup-form {
+        display: inline-block;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .login-form {
+        display: inline-block;
+    }
+    
+    .signup-form {
+        display: inline-block;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .login-form {
+        display: inline-block;
+    }
+    
+    .signup-form {
+        display: inline-block;
+    }
+}
