--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,6 @@
-<form class="login-form">
+    <div class="row">
+
+<form class="login-form col-md-6">
     <div>
         <label for="username-signup">Username:</label>
         <input type="text" id="username-login" />
@@ -12,7 +14,7 @@
     </div>
 </form>
 
-<form class="signup-form">
+<form class="signup-form col-md-6">
     <div>
         <label for="username-signup">Username:</label>
         <input type="text" id="username-signup" />
@@ -30,4 +32,4 @@
     </div>
 </form>
 
-<script src="/assets/js/login.js"></script>
+    </div>
