--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -3,18 +3,17 @@
     justify-content: center;
 }
 
-#auth-forms-container-container {
-}
-
-.login-form {
+#login-form {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    margin-top: 50px;
+    font-size: 16px;
     display: inline-block;
 }
 
-.signup-form {
+#signup-form {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    margin-top: 50px;
+    font-size: 16px;
     display: inline-block;
 }
 
@@ -27,6 +26,8 @@ button {
     cursor: pointer;
     width: 100%;
     font-size: 20px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
 }
 
 button:hover {
@@ -40,34 +41,4 @@ input {
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-}
-
-@media screen and (max-width: 980px) {
-    .login-form {
-        display: inline-block;
-    }
-    
-    .signup-form {
-        display: inline-block;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .login-form {
-        display: inline-block;
-    }
-    
-    .signup-form {
-        display: inline-block;
-    }
-}
-
-@media screen and (max-width: 575px) {
-    .login-form {
-        display: inline-block;
-    }
-    
-    .signup-form {
-        display: inline-block;
-    }
 }
