--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form id="login-form" class="col-md-6">
+<form id="login-form" class="col-md-offset-3 col-md-6 col-sm-12 col-xs-12">
     <div>
         <label for="email-login">Email</label>
         <input type="text" id="email-login">
@@ -11,7 +11,7 @@
         <button type="submit">Log in</button>
     </div>
 </form>
-<form id="signup-form" class="col-md-6">
+<form id="signup-form" class="col-md-offset-3 col-md-6 col-sm-12 col-xs-12">
     <div>
         <label for="username-signup">Username</label>
         <input type="text" id="username-signup">
